@@ -1,3 +1,7 @@
+(define whitespace-property-list '( (9 . 13) 32 133 160 5760 6158 (8192 . 8202) 8232 8233 8239 8287 12288))
+
+(define other-alphabetic-list '( 837 1456 1457 1458 1459 1460 1461 1462 1463 1464 1465 1466 1467 1468 1469 1471 1473 1474 1476 1477 1479 1552 1553 1554 1555 1556 1557 1558 1559 1560 1561 1562 1611 1612 1613 1614 1615 1616 1617 1618 1619 1620 1621 1622 1623 1625 1626 1627 1628 1629 1630 1648 1750 1751 1752 1753 1754 1755 1756 1761 1762 1763 1764 1767 1768 1773 1809 1840 1841 1842 1843 1844 1845 1846 1847 1848 1849 1850 1851 1852 1853 1854 1855 1958 1959 1960 1961 1962 1963 1964 1965 1966 1967 1968 2305 2306 2307 2366 2367 2368 2369 2370 2371 2372 2373 2374 2375 2376 2377 2378 2379 2380 2402 2403 2433 2434 2435 2494 2495 2496 2497 2498 2499 2500 2503 2504 2507 2508 2519 2530 2531 2561 2562 2563 2622 2623 2624 2625 2626 2631 2632 2635 2636 2641 2672 2673 2677 2689 2690 2691 2750 2751 2752 2753 2754 2755 2756 2757 2759 2760 2761 2763 2764 2786 2787 2817 2818 2819 2878 2879 2880 2881 2882 2883 2884 2887 2888 2891 2892 2902 2903 2914 2915 2946 3006 3007 3008 3009 3010 3014 3015 3016 3018 3019 3020 3031 3073 3074 3075 3134 3135 3136 3137 3138 3139 3140 3142 3143 3144 3146 3147 3148 3157 3158 3170 3171 3202 3203 3262 3263 3264 3265 3266 3267 3268 3270 3271 3272 3274 3275 3276 3285 3286 3298 3299 3330 3331 3390 3391 3392 3393 3394 3395 3396 3398 3399 3400 3402 3403 3404 3415 3426 3427 3458 3459 3535 3536 3537 3538 3539 3540 3542 3544 3545 3546 3547 3548 3549 3550 3551 3570 3571 3633 3636 3637 3638 3639 3640 3641 3642 3661 3761 3764 3765 3766 3767 3768 3769 3771 3772 3789 3953 3954 3955 3956 3957 3958 3959 3960 3961 3962 3963 3964 3965 3966 3967 3968 3969 3984 3985 3986 3987 3988 3989 3990 3991 3993 3994 3995 3996 3997 3998 3999 4000 4001 4002 4003 4004 4005 4006 4007 4008 4009 4010 4011 4012 4013 4014 4015 4016 4017 4018 4019 4020 4021 4022 4023 4024 4025 4026 4027 4028 4139 4140 4141 4142 4143 4144 4145 4146 4147 4148 4149 4150 4152 4155 4156 4157 4158 4182 4183 4184 4185 4190 4191 4192 4194 4199 4200 4209 4210 4211 4212 4226 4227 4228 4229 4230 4959 5906 5907 5938 5939 5970 5971 6002 6003 6070 6071 6072 6073 6074 6075 6076 6077 6078 6079 6080 6081 6082 6083 6084 6085 6086 6087 6088 6313 6432 6433 6434 6435 6436 6437 6438 6439 6440 6441 6442 6443 6448 6449 6450 6451 6452 6453 6454 6455 6456 6576 6577 6578 6579 6580 6581 6582 6583 6584 6585 6586 6587 6588 6589 6590 6591 6592 6600 6601 6679 6680 6681 6682 6683 6912 6913 6914 6915 6916 6965 6966 6967 6968 6969 6970 6971 6972 6973 6974 6975 6976 6977 6978 6979 7040 7041 7042 7073 7074 7075 7076 7077 7078 7079 7080 7081 7204 7205 7206 7207 7208 7209 7210 7211 7212 7213 7214 7215 7216 7217 7218 7219 7220 7221 9398 9399 9400 9401 9402 9403 9404 9405 9406 9407 9408 9409 9410 9411 9412 9413 9414 9415 9416 9417 9418 9419 9420 9421 9422 9423 9424 9425 9426 9427 9428 9429 9430 9431 9432 9433 9434 9435 9436 9437 9438 9439 9440 9441 9442 9443 9444 9445 9446 9447 9448 9449 11744 11745 11746 11747 11748 11749 11750 11751 11752 11753 11754 11755 11756 11757 11758 11759 11760 11761 11762 11763 11764 11765 11766 11767 11768 11769 11770 11771 11772 11773 11774 11775 43043 43044 43045 43046 43047 43136 43137 43188 43189 43190 43191 43192 43193 43194 43195 43196 43197 43198 43199 43200 43201 43202 43203 43302 43303 43304 43305 43306 43335 43336 43337 43338 43339 43340 43341 43342 43343 43344 43345 43346 43561 43562 43563 43564 43565 43566 43567 43568 43569 43570 43571 43572 43573 43574 43587 43596 43597 64286 68097 68098 68099 68101 68102 68108 68109 68110 68111))
+
 (define general-category-alist '(
     (Cc . (0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159))
     (Nd . (48 49 50 51 52 53 54 55 56 57 1632 1633 1634 1635 1636 1637 1638 1639 1640 1641 1776 1777 1778 1779 1780 1781 1782 1783 1784 1785 1984 1985 1986 1987 1988 1989 1990 1991 1992 1993 2406 2407 2408 2409 2410 2411 2412 2413 2414 2415 2534 2535 2536 2537 2538 2539 2540 2541 2542 2543 2662 2663 2664 2665 2666 2667 2668 2669 2670 2671 2790 2791 2792 2793 2794 2795 2796 2797 2798 2799 2918 2919 2920 2921 2922 2923 2924 2925 2926 2927 3046 3047 3048 3049 3050 3051 3052 3053 3054 3055 3174 3175 3176 3177 3178 3179 3180 3181 3182 3183 3302 3303 3304 3305 3306 3307 3308 3309 3310 3311 3430 3431 3432 3433 3434 3435 3436 3437 3438 3439 3664 3665 3666 3667 3668 3669 3670 3671 3672 3673 3792 3793 3794 3795 3796 3797 3798 3799 3800 3801 3872 3873 3874 3875 3876 3877 3878 3879 3880 3881 4160 4161 4162 4163 4164 4165 4166 4167 4168 4169 4240 4241 4242 4243 4244 4245 4246 4247 4248 4249 6112 6113 6114 6115 6116 6117 6118 6119 6120 6121 6160 6161 6162 6163 6164 6165 6166 6167 6168 6169 6470 6471 6472 6473 6474 6475 6476 6477 6478 6479 6608 6609 6610 6611 6612 6613 6614 6615 6616 6617 6992 6993 6994 6995 6996 6997 6998 6999 7000 7001 7088 7089 7090 7091 7092 7093 7094 7095 7096 7097 7232 7233 7234 7235 7236 7237 7238 7239 7240 7241 7248 7249 7250 7251 7252 7253 7254 7255 7256 7257 42528 42529 42530 42531 42532 42533 42534 42535 42536 42537 43216 43217 43218 43219 43220 43221 43222 43223 43224 43225 43264 43265 43266 43267 43268 43269 43270 43271 43272 43273 43600 43601 43602 43603 43604 43605 43606 43607 43608 43609 65296 65297 65298 65299 65300 65301 65302 65303 65304 65305 66720 66721 66722 66723 66724 66725 66726 66727 66728 66729 120782 120783 120784 120785 120786 120787 120788 120789 120790 120791 120792 120793 120794 120795 120796 120797 120798 120799 120800 120801 120802 120803 120804 120805 120806 120807 120808 120809 120810 120811 120812 120813 120814 120815 120816 120817 120818 120819 120820 120821 120822 120823 120824 120825 120826 120827 120828 120829 120830 120831))
@@ -656,6 +660,56 @@
 (define downcase-hashtable #f)
 (define titlecase-hashtable #f)
 (define general-category-hashtable #f)
+(define other-alphabetic-hashtable #f)
+(define whitespace-hashtable #f)
+
+(define (property-list->hashtable property-list)
+  (let ([hashtable (make-eq-hashtable)])
+    (for-each
+     (lambda (data)
+       (cond
+        [(number? data)
+         (hashtable-set! hashtable (integer->char data) #t)]
+        ; (start . end)
+        [(pair? data)
+         (let loop ([start (car data)]
+                    [end (cdr data)])
+           (if (> start end)
+               '()
+               (begin (hashtable-set! hashtable (integer->char start) #t)
+                      (loop (+ start 1) end))))]))
+     property-list)
+    hashtable))
+
+
+(define (whitespace-proprety? char)
+  (unless whitespace-hashtable
+    (set! whitespace-hashtable (property-list->hashtable whitespace-property-list)))
+  (hashtable-ref whitespace-hashtable char #f))
+
+
+
+(define (other-alphabetic? char)
+  (unless other-alphabetic
+    (let ([hashtable (make-eq-hashtable)])
+      (for-each (lambda (char-integer) (hashtable-set! hashtable (integer->char char-integer) #t))
+                other-alphabetic-list))
+    (set! other-alphabetic-list hashtable))
+  (hashtable-ref other-alphabetic-list char #f))
+
+(define (char-whitespace? char)
+  (whitespace-proprety? char))
+
+(define (char-alphabetic? char)
+  (case (char-general-category char)
+    ((Lu Ll Lt Lm Lo Nl) #t)
+    ((Mn Mc So)
+     (other-alphabetic? char))
+    (else #f)))
+
+(define (char-numeric? char)
+  (eq? (char-general-category char) 'Nd))
+
 
 (define (alist->eq-hash-table alist)
   (let ([hashtable (make-eq-hashtable)])
@@ -775,6 +829,13 @@
     (test (char-general-category #\a) 'Ll)
     (test (char-general-category #\space) 'Zs)
     (test (char-general-category #\x10FFFF) 'Cn)
+    (test (char-alphabetic? #\a) #t)
+    (test (char-alphabetic? #\1) #f)
+    (test (char-numeric? #\1) #t)
+    (test (char-numeric? #\a) #f)
+    (test (char-whitespace? #\space) #t)
+    (test (char-whitespace? #\x00A0) #t)
+    (test (char-whitespace? #\a) #f)
 
 (display (char-general-category #\a))
 (display (char-general-category #\space) )
